# securityAssign

./: .gitignore  CLAUDE.md  DEV_GUIDE.md  docs_macros.py  flags.md  mkdocs.yml
Diagrams/: report.txt
auth_service/: Dockerfile  pyproject.toml
auth_service/src/auth_service/application/: audit.py  bootstrap.py  deps.py  login.py  ports.py  refresh.py  register.py  settings.py  tokens.py
auth_service/src/auth_service/domain/: errors.py  refresh.py  users.py
auth_service/src/auth_service/infrastructure/: app.py  audit_log.py  config.py  db.py  main.py  schema.sql  schemas.py
auth_service/src/auth_service/infrastructure/repositories/: refresh_repo.py  users_repo.py
auth_service/tests/: conftest.py  test_bootstrap.py  test_integration.py  test_integration_postgres.py  test_login.py  test_refresh.py  test_register.py
banking_service/: Dockerfile  pyproject.toml
banking_service/tests/: conftest.py  test_freeze_account.py  test_integration.py  test_integration_postgres.py  (+6 more)
contracts/: crypto_boundary.md  token_payload.md
demo/: Dockerfile  attack-demo.sh  entrypoint.sh  run.ps1  run.sh
docs/: README.md  index.md
shared_security/: pyproject.toml
shared_security/src/shared_security/: audit_chain.py  canonical.py  field_crypto.py  tokens.py  transaction_signatures.py
shared_security/tests/: conftest.py  test_audit_chain.py  test_field_crypto.py  test_passwords.py  test_tokens.py  test_transaction_signatures.py
ui/: app.html  app.js  index.html  login.js  session.js  styles.css
ui-tests/: package-lock.json  package.json  playwright.config.js
(+86 files in other folders)
