[project]
name = "auth-service"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "shared-security",
    "fastapi>=0.110",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "psycopg[binary,pool]>=3.1",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auth_service = ["infrastructure/schema.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
