[project]
name = "shared-security"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "cryptography>=42",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
